--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         gap: 20px; /* Espaciado entre la imagen y el texto */
         text-align: center; /* Alinear el texto al centro */
         margin: 20px;
+        margin-left: 0 !important;
+        padding-left: 0 !important
         width: 100%; /* Aseguramos que ocupe el 100% del ancho */
         max-width: 500px; /* Limitar el ancho máximo si es necesario */
     }
