--- a/publicaciones.html
+++ b/publicaciones.html
@@ -12,11 +12,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
+                <h1 class="navbar-title">Página web de Jordi Just Alcaraz</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
-                    <ul class="navbar-nav d-md-inline-flex mx-auto">
+                    <ul class="navbar-nav d-md-inline-flex">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html"><span>Inicio</span></a>
                         </li>
