--- a/perfil-académico.html
+++ b/perfil-académico.html
@@ -16,7 +16,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
-                    <ul class="navbar-nav d-md-inline-flex mx-auto">
+                    <ul class="navbar-nav d-md-inline-flex">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html"><span>Inicio</span></a>
                         </li>
