--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     .portrait-title h2 {
         margin: 0; /* Eliminar márgenes por defecto */
         font-size: 24px; /* Tamaño del nombre */
-        font-family: 'Trebuchet MS';
         font-weight: bold;
     }
 
@@ -45,7 +44,6 @@
         margin: 5px 0; /* Espaciado entre subtítulos */
         font-size: 18px; /* Tamaño de los subtítulos */
         color: #555; /* Color gris para el texto */
-        font-family: 'Trebuchet MS';
     }
 
     /* Lista de iconos */
@@ -77,7 +75,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -137,7 +135,7 @@
   </div>
     <div class="col-12 col-lg-8">
         <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 20px; margin-right: 20px; text-align: justify">
-            <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
+            <h1>Bienvenidos a mi página web</h1>
             <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
         </main>
         <div class="row">
