--- a/publicaciones.html
+++ b/publicaciones.html
@@ -10,7 +10,7 @@
     <header>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,9 +35,9 @@
         </nav>
     </header>
     <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 20px; margin-right: 20px; text-align: justify">
-        <h1 style="font-family: 'Trebuchet MS'">Publicaciones</h1>
+        <h1>Publicaciones</h1>
         <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
-        <h2 style="font-family: 'Trebuchet MS'">En revistas académicas</h2>
+        <h2>En revistas académicas</h2>
         <ul>
             <li>Just Alcaraz, J. (2023). The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">[Descarga aquí]</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
         </ul>
