--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </div>
   </div>
     <div class="col-12 col-lg-8">
-        <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 20px; margin-right: 20px; text-align: justify">
+        <main style="text-align: justify">
             <h1>Bienvenidos a mi página web</h1>
             <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
         </main>
