--- a/index.html
+++ b/index.html
@@ -100,41 +100,41 @@
         </nav>
     </header>
     <div class="row">
-  <div class="col-12 col-lg-4">
-    <div id="profile">
-      <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
-      <div class="portrait-title">
-        <h2>Jordi Just Alcaraz</h2>
-        <h3>Investigador predoctoral (máster)</h3>
-        <h3>Universidad de Salamanca</h3>
-        <h3>Área de Lingüística</h3>
+        <div class="col-12 col-lg-4">
+        <div id="profile">
+          <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
+          <div class="portrait-title">
+            <h2>Jordi Just Alcaraz</h2>
+            <h3>Investigador predoctoral (máster)</h3>
+            <h3>Universidad de Salamanca</h3>
+            <h3>Área de Lingüística</h3>
+          </div>
+            <ul class="network-icon" aria-hidden="true">
+            <li>
+              <a href="mailto:jordijustalcaraz@usal.es" >
+                <i class="fas fa-envelope"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://x.com/AlcarazJust" target="_blank" rel="noopener">
+                <i class="fab fa-x-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://bsky.app/profile/alcarazjust.bsky.social" target="_blank" rel="noopener">
+                <i class="fab fa-bluesky"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/AlcarazJust" target="_blank" rel="noopener">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            </ul>
+        </div>
       </div>
-        <ul class="network-icon" aria-hidden="true">
-        <li>
-          <a href="mailto:jordijustalcaraz@usal.es" >
-            <i class="fas fa-envelope"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://x.com/AlcarazJust" target="_blank" rel="noopener">
-            <i class="fab fa-x-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://bsky.app/profile/alcarazjust.bsky.social" target="_blank" rel="noopener">
-            <i class="fab fa-bluesky"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/AlcarazJust" target="_blank" rel="noopener">
-            <i class="fab fa-github"></i>
-          </a>
-        </li>
-        </ul>
-    </div>
-  </div>
     <div class="col-12 col-lg-8">
-        <main style="text-align: justify">
+        <main style="margin: 2rem; text-align: justify">
             <h1>Bienvenidos a mi página web</h1>
             <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
         </main>
