--- a/perfil-académico.html
+++ b/perfil-académico.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <main style="margin: 2rem; text-align: justify">
+    <main style="margin: 1rem 2rem; text-align: justify">
         <h1>Entorno de trabajo</h1>
         <p>A continuación, encontrarás una breve descripción de mi perfil académico, con el entorno personal de aprendizaje y el entorno personal de investigación.</p>
         <h2>Entorno personal de aprendizaje</h2>
