--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
+        <aside class="search-results" id="search">
+          <div class="container">
+              <section class="search-header">
+                  <div class="row no-gutters justify-content-between mb-3">
+                      <div class="col-6">
+                          <h1>Busca aquí</h1>
+                      </div>
+                      <div class="col-6 col-search-close">
+                          <a class="js-search" href="#"><i class="fas fa-times-circle text-muted" aria-hidden="true"></i></a>
+                      </div>
+                  </div>
+                  <div id="search-box">
+                      <input name="q" id="search-query" placeholder="Search..." autocapitalize="off" autocomplete="off" autocorrect="off" spellcheck="false" type="search">
+                  </div>
+              </section>
+              <section class="section-search-results">
+                  <div id="search-hits"></div>
+              </section>
+          </div>
+        </aside>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
