--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
-            <h3 style="text-align: right">Jordi Just Alcaraz</h3>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -98,42 +97,48 @@
                     </ul>
                 </div>
             </div>
+            <h3 style="text-align: right">Jordi Just Alcaraz</h3>
         </nav>
     </header>
-    <div class="row">
-        <div class="col-12 col-lg-4">
-        <div id="profile">
-          <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
-          <div class="portrait-title">
-            <h2>Jordi Just Alcaraz</h2>
-            <h3>Investigador predoctoral (máster)</h3>
-            <h3>Universidad de Salamanca</h3>
-            <h3>Área de Lingüística</h3>
-          </div>
-            <ul class="network-icon" aria-hidden="true">
-            <li>
-              <a href="mailto:jordijustalcaraz@usal.es" >
-                <i class="fas fa-envelope"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://x.com/AlcarazJust" target="_blank" rel="noopener">
-                <i class="fab fa-x-twitter"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://bsky.app/profile/alcarazjust.bsky.social" target="_blank" rel="noopener">
-                <i class="fab fa-bluesky"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/AlcarazJust" target="_blank" rel="noopener">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            </ul>
+    <section id="about" class="home-section wg-about   "  >
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div id="profile">
+                    <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
+                    <div class="portrait-title">
+                        <h2>Jordi Just Alcaraz</h2>
+                        <h3>Investigador predoctoral (máster)</h3>
+                        <h3>Universidad de Salamanca</h3>
+                        <h3>Área de Lingüística</h3>
+                    </div>
+                    <ul class="network-icon" aria-hidden="true">
+                        <li>
+                            <a href="mailto:jordijustalcaraz@usal.es" >
+                                <i class="fas fa-envelope"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://x.com/AlcarazJust" target="_blank" rel="noopener">
+                                <i class="fab fa-x-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://bsky.app/profile/alcarazjust.bsky.social" target="_blank" rel="noopener">
+                                <i class="fab fa-bluesky"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/AlcarazJust" target="_blank" rel="noopener">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
+    </section>
     <div class="col-12 col-lg-8">
         <main style="margin: 1rem 2rem; text-align: justify">
             <h1>Bienvenidos a mi página web</h1>
