--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     /* Efecto al pasar el ratón */
     ul li a:hover {
-        color: #1DA1F2; /* Azul de Twitter */
+        color: #1DA1F2;
     }
     </style>
 </head>
@@ -97,12 +97,12 @@
                     </ul>
                 </div>
             </div>
-            <nav class="no-wrap"><h3>Jordi Just Alcaraz</h3></nav>
+            <h4>Jordi Just Alcaraz</h4>
         </nav>
     </header>
     <section id="about" class="home-section wg-about">
     <div class="container">
-        <div class="row g-5">
+        <div class="row g-0">
             <div class="col-12 col-lg-4">
                 <div id="profile">
                     <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
