--- a/perfil-académico.html
+++ b/perfil-académico.html
@@ -7,33 +7,39 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
-                    <ul class="navbar-nav d-md-inline-flex">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html"><span>Inicio</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="perfil-académico.html"><span>Perfil académico</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Curriculum vitae</em></span></a>
-                        </li>
-                    </ul>
-                </div>
+
+   <header>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
+        <div class="container-fluid">
+            <!-- Botón de toggler para móviles -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
+                <ul class="navbar-nav d-md-inline-flex">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html"><span>Inicio</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="perfil-académico.html"><span>Perfil académico</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cvn-completo.pdf"><span><em>Curriculum vitae</em></span></a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+            <div class="d-flex ms-auto">
+                <h3 class="navbar-text mb-0" style="white-space: nowrap;">Jordi Just Alcaraz</h3>
+            </div>
+        </div>
+    </nav>
+</header>
     <main style="margin: 1rem 2rem; text-align: justify">
         <h1>Entorno de trabajo</h1>
         <p>A continuación, encontrarás una breve descripción de mi perfil académico, con el entorno personal de aprendizaje y el entorno personal de investigación.</p>
