--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
 
     /* Lista de iconos */
-    ul {
+    #profile ul {
         list-style: none; /* Eliminar los puntos de las listas */
         display: flex; /* Organizar en fila */
         justify-content: center; /* Centrar horizontalmente */
@@ -57,7 +57,7 @@
     }
 
     /* Enlace de iconos */
-    ul li a {
+    #profile ul li a {
         text-decoration: none; /* Quitar el subrayado */
         color: #555; /* Color de los iconos */
         font-size: 24px; /* Tamaño de los iconos */
