--- a/publicaciones.html
+++ b/publicaciones.html
@@ -14,7 +14,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
         <div class="container-fluid">
-            <!-- Botón de toggler para móviles -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,13 +39,43 @@
         </div>
     </nav>
 </header>
-    <main style="margin: 1rem 2rem; text-align: justify">
-        <h1>Publicaciones</h1>
-        <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
-        <h2>En revistas académicas</h2>
-        <ul>
-            <li>Just Alcaraz, J. (2023). The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">[Descarga aquí]</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
-        </ul>
-    </main>
+    <section id="publications" class="home-section wg-publications">
+    <div class="container">
+        <div class="row g-0">
+            <div class="col-12 col-lg-2">
+                <div id="scientific publications">
+                    <h1>Publicaciones científicas</h1>
+                    <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-10">
+                <main style="margin: 1rem 2rem; text-align: justify">
+                   <h2>En revistas académicas</h2>
+                    <ul>
+                        <li>Just Alcaraz, J. (2023). The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
+                    </ul>
+                </main>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row g-0">
+            <div class="col-12 col-lg-2">
+                <div id="scientific publications">
+                    <h1>Divulgación científica</h1>
+                    <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-10">
+                <main style="margin: 1rem 2rem; text-align: justify">
+                   <h2>En revistas académicas</h2>
+                    <ul>
+                        <li>Just Alcaraz, J. (2023). Ni siquiera una conjunción, incluso más que un adverbio. <em>Pancronía. Revista estudiantil de divulgación científica</em>, <em>1</em>, 38-45. <a href="divulg/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a></a><a href="https://drive.google.com/file/d/1PyuLSCC68sPZgXqM836v87o7u3fUHfFU/view" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
+                    </ul>
+                </main>
+            </div>
+        </div>
+    </div>
+    </section>
 </body>
 </html>
