--- a/publicaciones.html
+++ b/publicaciones.html
@@ -10,7 +10,7 @@
    <header>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
+    <link href="assets/css/academicons.css" rel="stylesheet">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,11 +40,11 @@
 </header>
     <section id="publications" class="home-section wg-publications">
     <div class="container">
-        <div class="row g-2">
+        <div class="row g-10">
             <div class="col-12 col-lg-2">
+                <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
                 <div id="scientific publications">
                     <h1>Publicaciones científicas</h1>
-                    <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-10">
@@ -62,7 +62,6 @@
             <div class="col-12 col-lg-2">
                 <div id="scientific publications">
                     <h1>Divulgación científica</h1>
-                    <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-10">
